--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,45 @@ header{
   background-size: cover;
   background-repeat: no-repeat;
   height: 1012px;
+  /* opacity: 0.9; */
+}
+#mynav{
+  background-color:rgba(7, 6, 2, 0.5); ;
+} 
+#mynav p{
+  color: white;
+  font-family: 'Cookie', cursive;
+  font-size: 48px;
+}
+#mynav ul li a{
+  font-family: 'Comfortaa', cursive;
+  color: white;
+  font-size: 24px;
+}
+#grievin{
+  align-items: center;
+  margin-top: 15%;
+  line-height: 100px;
+}
+#grievin p{
+  align-items: center;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 64px;
+}
+ button{
+  font-family: 'Comfortaa', cursive;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 40px;
+  border-radius: 5px;
+  width: 300px;
+  height: 40px;
+  /* color: white; */
+  background-color:rgb (26 83 90) ;
+}
+button a{
+  text-decoration: none;
 }
 #my-work{
   background-image: url(../Assets/workpageimg.jpg);
