--- a/css/index.css
+++ b/css/index.css
@@ -59,14 +59,35 @@ header{
 #myabout p{
   font-size: 24px;
 }
-/* #myabout img{
-  margin-right: 10%;
-} */
+#myabout img{
+  border-radius: 5px;
+}
 #my-work{
   background-image: url(../Assets/workpageimg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   /* height: 867px; */
+}
+#my-work h1{
+  color: white;
+}
+#my-work p{
+  color: white;
+  font-size: 24px;
+}
+
+#card{
+  float: left;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+  width: 30%;
+  height: 485px;
+  margin-left: 50px;
+  margin-bottom: 50px;
+}
+#contact{
+  clear: left;
 }
 footer{
   background-color: rgba(16, 34, 35, 1);
