--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ header{
   font-size: 24px;
 }
 a:hover{
-  background-color:#f5f5f5;
+  background-color:black;
   color: black;
 }
 #grievin{
@@ -181,6 +181,17 @@ textarea{
   border-radius: 5px;
   margin-left: 1.5rem;
   box-sizing: border-box;
+}
+.icofont{
+  /* position: fixed; */
+  width: 50px;
+  border-radius: 5px;
+  height: 50px;
+  background-color: black
+ 
+}
+.icofont-long-arrow-up{
+  color: white;
 }
 footer{
   background-color: rgba(16, 34, 35, 1);
