change home page layout

--- a/css/index.css
+++ b/css/index.css
@@ -54,7 +54,7 @@ a:hover{
   width: 200px;
   height: 40px;
   color: white;
-  margin-top: 10vh;
+  /* margin-top: 10vh; */
   background-color:rgba(16, 34, 35, 1)
 }
 /* button a{
